--- a/pytorch/openbayes.yaml
+++ b/pytorch/openbayes.yaml
@@ -1,12 +1,12 @@
 data_binding: 
-- data: openbayes/mnist/1
+- data: openbayes/MNIST/2
   path: /input0
-resource: t4
+resource: vgpu
 env: pytorch-1.8.1
 command: "python main.py --input=/input0"
 hyper_tuning:
-  max_job_count: 10
-  hyperparameter_metric: precision
+  max_job_count: 5
+  hyperparameter_metric: acc
   goal: MAXIMIZE
   algorithm: Grid
   parameter_specs:
