feat: update tf hypertuning

--- a/tensorflow/openbayes.yaml
+++ b/tensorflow/openbayes.yaml
@@ -1,11 +1,11 @@
 data_binding: 
-- data: openbayes/mnist/1
+- data: openbayes/eBIQp4yPMtU/2 # MNIST 数据集 https://openbayes.com/console/openbayes/datasets/eBIQp4yPMtU/2
   path: /input0
-resource: t4
+resource: vgpu
 env: tensorflow-1.15
 command: "python main.py --input=/input0"
 hyper_tuning:
-  max_job_count: 10
+  max_job_count: 5
   hyperparameter_metric: precision
   goal: MAXIMIZE
   algorithm: Grid
